Fixed z-index issue with background and cat

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 .image-wrap {
+  z-index: -1;
   position: relative;
   width: 1500px;
   height: 500px;
